--- a/src/ExecutionMachine.nuspec
+++ b/src/ExecutionMachine.nuspec
@@ -17,9 +17,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\netstandard2.0\ExecutionMachine.dll" target="lib\netstandard2.0\ExecutionMachine.dll" />    
-    <file src="bin\Release\netstandard2.0\ExecutionMachine.Abstractions.dll" target="lib\netstandard2.0\ExecutionMachine.Abstractions.dll" />
-    <file src="bin\Release\netstandard2.0\ExecutionMachine.Abstractions.xml" target="lib\netstandard2.0\ExecutionMachine.Abstractions.xml" />
+    <file src="ExecutionMachine\bin\Release\netstandard2.0\ExecutionMachine.dll" target="lib\netstandard2.0\ExecutionMachine.dll" />    
+    <file src="ExecutionMachine\bin\Release\netstandard2.0\ExecutionMachine.Abstractions.dll" target="lib\netstandard2.0\ExecutionMachine.Abstractions.dll" />
+    <file src="ExecutionMachine\bin\Release\netstandard2.0\ExecutionMachine.Abstractions.xml" target="lib\netstandard2.0\ExecutionMachine.Abstractions.xml" />
   </files>
 
 </package>
