--- a/src/Samples/ExecutionMachine.Samples/ExecutionMachine.Samples.csproj
+++ b/src/Samples/ExecutionMachine.Samples/ExecutionMachine.Samples.csproj
@@ -8,12 +8,13 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>ExecutionMachine.Samples</RootNamespace>
     <AssemblyName>ExecutionMachine.Samples</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,13 +37,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FluentValidation, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FluentValidation.8.0.100\lib\net45\FluentValidation.dll</HintPath>
+      <HintPath>..\..\packages\FluentValidation.8.6.1\lib\net45\FluentValidation.dll</HintPath>
     </Reference>
-    <Reference Include="NinjaMvvm, Version=1.0.3.3, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NinjaMvvm.Wpf.1.0.3.3\lib\net471\NinjaMvvm.dll</HintPath>
+    <Reference Include="NinjaMvvm, Version=1.1.1.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NinjaMvvm.Wpf.1.1.1.1\lib\net472\NinjaMvvm.dll</HintPath>
     </Reference>
-    <Reference Include="NinjaMvvm.Wpf, Version=1.0.3.3, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NinjaMvvm.Wpf.1.0.3.3\lib\net471\NinjaMvvm.Wpf.dll</HintPath>
+    <Reference Include="NinjaMvvm.Wpf, Version=1.1.1.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NinjaMvvm.Wpf.1.1.1.1\lib\net472\NinjaMvvm.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
