--- a/src/Samples/ExecutionMachine.Samples/packages.config
+++ b/src/Samples/ExecutionMachine.Samples/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentValidation" version="8.0.100" targetFramework="net472" />
-  <package id="NinjaMvvm.Wpf" version="1.0.3.3" targetFramework="net472" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net48" />
+  <package id="NinjaMvvm" version="2.0.2" targetFramework="net48" />
+  <package id="NinjaMvvm.Wpf" version="1.1.1.1" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net472" />
