--- a/src/ExecutionMachine/ExecutionMachine.csproj
+++ b/src/ExecutionMachine/ExecutionMachine.csproj
@@ -2,10 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Tim Burris</Authors>
+    <Description>A simple library used by applications that need to throttle repeated actions.</Description>
+    <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);IncludeP2PAssets</TargetsForTfmSpecificBuildOutput>
+
+    <PackageLicenseUrl>https://github.com/TimBurris/ExecutionMachine/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/TimBurris/ExecutionMachine</PackageProjectUrl>
+    <PackageTags>task;excecution;execute;defer;throttle;idle;search;delay</PackageTags>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ExecutionMachine.Abstractions\ExecutionMachine.Abstractions.csproj" />
   </ItemGroup>
 
+  <Target Name="IncludeP2PAssets">
+    <ItemGroup>
+      <BuildOutputInPackage Include="$(OutputPath)ExecutionMachine.Abstractions.dll" />
+      <BuildOutputInPackage Include="$(OutputPath)ExecutionMachine.Abstractions.xml" />
+    </ItemGroup>
+  </Target>
 </Project>
