--- a/src/ExecutionMachine.Abstractions/ExecutionMachine.Abstractions.csproj
+++ b/src/ExecutionMachine.Abstractions/ExecutionMachine.Abstractions.csproj
@@ -1,11 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>C:\Code\git\Source\Repos\ExecutionMachine\src\ExecutionMachine.Abstractions\ExecutionMachine.Abstractions.xml</DocumentationFile>
-  </PropertyGroup>
-
 </Project>
