--- a/ExecutionMachine-azure-pipelines.yml
+++ b/ExecutionMachine-azure-pipelines.yml
@@ -15,13 +15,13 @@ variables:
   packageVersion: ${{ parameters.VersionNumber }}
 
 steps:
-- task: DotNetCoreCLI@2
-  inputs:
-    command: pack
-    packagesToPack: '**/ExecutionMachine.Abstractions.csproj'
-    versioningScheme: byEnvVar
-    versionEnvVar: packageVersion
-    outputDir: '$(Build.ArtifactStagingDirectory)'
+#- task: DotNetCoreCLI@2
+#  inputs:
+#    command: pack
+#    packagesToPack: '**/ExecutionMachine.Abstractions.csproj'
+#    versioningScheme: byEnvVar
+#    versionEnvVar: packageVersion
+#    outputDir: '$(Build.ArtifactStagingDirectory)'
  
 - task: DotNetCoreCLI@2
   inputs:
